--- a/homework-4/pom.xml
+++ b/homework-4/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>amqp-client</artifactId>
             <version>5.16.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
 
     <properties>
